# headless/headless-commerce/headless-commerce-admin-account-impl/rest-openapi.yaml
@@ -499,6 +499,11 @@ paths:
             operationId: getAccountGroupsPage
             parameters:
                 - in: query
+                  name: filter
+                  required: false
+                  schema:
+                      type: string
+                - in: query
                   explode: true
                   name: page
                   required: false
@@ -512,6 +517,11 @@ paths:
                   schema:
                       type: integer
                   style: form
+                - in: query
+                  name: sort
+                  required: false
+                  schema:
+                      type: string
             responses:
                 200:
                     content:
@@ -1014,6 +1024,11 @@ paths:
             operationId: getAccountsPage
             parameters:
                 - in: query
+                  name: filter
+                  required: false
+                  schema:
+                      type: string
+                - in: query
                   explode: true
                   name: page
                   required: false
@@ -1027,6 +1042,11 @@ paths:
                   schema:
                       type: integer
                   style: form
+                - in: query
+                  name: sort
+                  required: false
+                  schema:
+                      type: string
             responses:
                 200:
                     content:
